Fixed alignment of text in the footer with the rest of the site's content.

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -434,8 +434,7 @@ footer {
     text-decoration: none; }
   footer p {
     margin: 0;
-    padding-top: 10px;
-    padding-left: 1em; }
+    padding-top: 10px; }
 
 .site-header {
   float: left; }
