--- a/assets/styles/sass/layout.scss
+++ b/assets/styles/sass/layout.scss
@@ -47,7 +47,6 @@ footer {
 	p {
 		margin:0; // Having any margins will mess up the footer.
 		padding-top: 10px;
-		padding-left: 1em;
 	}
 }
 
